# oxidized_navigation

./: CHANGELOG.md  Cargo.toml  MIGRATING.md  README.md
.config/: nextest.toml
.github/: FUNDING.yml
.github/workflows/: benches.yml  ci.yml  ci_results.yml  report_avian.yml  report_benches.yml  report_parry.yml  report_rapier.yml  run_benches.yml  rust.yml  test_avian.yml  test_benches.yml  test_no_features.yml  test_parry.yml  test_rapier.yml  test_xpbd.yml
benches/: simple_geometry.rs  simple_navigation.rs
crates/oxidized_navigation/: Cargo.toml
crates/oxidized_navigation/benches/: simple_navigation.rs
crates/oxidized_navigation/examples/: parry3d.rs
crates/oxidized_navigation/src/: contour.rs  conversion.rs  debug_draw.rs  detail_mesh.rs  heightfields.rs  lib.rs  mesher.rs  query.rs  regions.rs  tiles.rs
crates/oxidized_navigation/src/colliders/: mod.rs
crates/oxidized_navigation_avian/: Cargo.toml  README.md
crates/oxidized_navigation_avian/examples/: avian.rs  avian_multi_floor.rs
crates/oxidized_navigation_avian/src/: lib.rs
crates/oxidized_navigation_avian/tests/: avian.rs
crates/oxidized_navigation_rapier/: Cargo.toml  README.md
crates/oxidized_navigation_rapier/examples/: rapier3d.rs  rapier3d_heightfield.rs  rapier3d_multi_floor.rs
crates/oxidized_navigation_rapier/src/: lib.rs
crates/oxidized_navigation_rapier/tests/: rapier3d.rs
examples/: avian.rs  avian_multi_floor.rs  blocking_async.rs  blocking_async_rapier.rs  blocking_async_xpbd.rs  heightfield.rs  parry.rs  parry3d.rs  rapier3d.rs  rapier3d_heightfield.rs  rapier3d_multi_floor.rs  xpbd.rs
src/: contour.rs  conversion.rs  debug_draw.rs  detail_mesh.rs  heightfields.rs  lib.rs  math.rs  mesher.rs  parry.rs  parry3d_macro.rs  query.rs  regions.rs  tiles.rs
src/colliders/: avian.rs  mod.rs  rapier.rs  xpbd.rs
tests/: avian.rs  parry3d.rs  rapier3d.rs  xpbd.rs
