[package]
name = "oxidized_navigation"
description = "A Nav-Mesh generation plugin for Bevy Engine."
version = "0.11.0"
edition = "2021"

authors = ["TheGrimsey"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/TheGrimsey/oxidized_navigation"
repository = "https://github.com/TheGrimsey/oxidized_navigation"
documentation = "https://docs.rs/crate/oxidized_navigation"

keywords = ["gamedev", "navmesh", "navmesh-generation", "bevy"]
categories = ["game-development"]

[features]
default = []
rapier = []
xpbd = ["bevy_xpbd_3d", "parry3d_xpbd"]
debug_draw = ["bevy/bevy_gizmos", "bevy/bevy_render"]
trace = []

[[example]]
name = "rapier3d"
required-features = ["debug_draw", "rapier"]

[[example]]
name = "rapier3d_heightfield"
required-features = ["debug_draw", "rapier"]

[[example]]
name = "rapier3d_multi_floor"
required-features = ["debug_draw", "rapier"]

[[example]]
name = "xpbd"
required-features = ["debug_draw", "xpbd"]

[[example]]
name = "parry3d"
required-features = ["debug_draw"]

[[test]]
name = "rapier3d"
required-features = ["rapier"]


[[test]]
name = "xpbd"
required-features = ["xpbd"]

[[test]]
name = "parry3d"

[dependencies]
bevy = { version = "0.13", default-features = false, features = ["multi-threaded"] }

# parry3d doesn't expose the convert-glam feature, so we need to add nalgebra to enable the feature
nalgebra = { version = "0.32", features = ["convert-glam025"] }

# different parry3d versions depending on physics implementation
parry3d_xpbd = { package = "parry3d", version = "0.13", optional = true }
parry3d_rapier = { package = "parry3d", version = "0.15.1"}

bevy_rapier3d = { version = "0.26.0", optional = true, default-features = false, features = ["dim3"] }
bevy_xpbd_3d = { version = "0.4", optional = true, default-features = false, features = ["3d", "f32", "parry-f32"]  }

smallvec = { version = "1.13", features = ["union"] }
cfg-if = "1.0.0"

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_asset",
    "bevy_pbr",
    "bevy_render",
    "bevy_winit",
    "x11",
    "ktx2",
    "tonemapping_luts",
    "zstd",
] }
criterion = { version = "0.5" }

[[bench]]
name = "simple_geometry"
harness = false

[[bench]]
name = "simple_navigation"
harness = false

[package.metadata.docs.rs]
# Compile docs.rs docs with debug_draw so docs for it appear.
features = [ "debug_draw" ]
