[package]
name = "oxidized_navigation"
description = "A Nav-Mesh generation plugin for Bevy Engine."
version = "0.11.0"
edition = "2021"

authors = ["TheGrimsey"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/TheGrimsey/oxidized_navigation"
repository = "https://github.com/TheGrimsey/oxidized_navigation"
documentation = "https://docs.rs/crate/oxidized_navigation"

keywords = ["gamedev", "navmesh", "navmesh-generation", "bevy"]
categories = ["game-development"]

[features]
default = []
rapier = ["bevy_rapier3d", "parry_016"]
xpbd = ["bevy_xpbd_3d", "parry_015"]
debug_draw = ["bevy/bevy_gizmos", "bevy/bevy_render"]
trace = []

parry_016 = ["parry3d_016"]
parry_015 = ["parry3d_015"]

[[example]]
name = "rapier3d"
required-features = ["debug_draw", "rapier"]

[[example]]
name = "rapier3d_heightfield"
required-features = ["debug_draw", "rapier"]

[[example]]
name = "rapier3d_multi_floor"
required-features = ["debug_draw", "rapier"]

[[example]]
name = "xpbd"
required-features = ["debug_draw", "xpbd"]

[[example]]
name = "parry3d"
required-features = ["parry_016", "debug_draw"]

[[test]]
name = "rapier3d"
required-features = ["rapier"]


[[test]]
name = "xpbd"
required-features = ["xpbd"]

[[test]]
name = "parry3d"
required-features = ["parry_016"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["multi_threaded"] }

# parry3d doesn't expose the convert-glam feature, so we need to add nalgebra to enable the feature
nalgebra = { version = "0.33", features = ["convert-glam027"] }

parry3d_016 = { package = "parry3d", version = "0.16", optional = true }
parry3d_015 = { package = "parry3d", version = "0.15", optional = true }

bevy_rapier3d = { version = "0.27", optional = true, default-features = false, features = ["dim3"] }
bevy_xpbd_3d = { version = "0.5", optional = true, default-features = false, features = ["3d", "f32", "parry-f32"]  }

smallvec = { version = "1.13", features = ["union"] }

[dev-dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
    "bevy_asset",
    "bevy_pbr",
    "bevy_render",
    "bevy_winit",
    "x11",
    "ktx2",
    "tonemapping_luts",
    "zstd",
] }
criterion = { version = "0.5" }

[[bench]]
name = "simple_geometry"
harness = false
required-features = [ "parry_016" ]

[[bench]]
name = "simple_navigation"
harness = false
required-features = [ "parry_016" ] 

[package.metadata.docs.rs]
# Compile docs.rs docs with debug_draw so docs for it appear.
features = [ "debug_draw" ]
