[package]
name = "oxidized_navigation"
description = "A Nav-Mesh generation plugin for Bevy Engine."
version = "0.12.0"
edition = "2021"

authors = ["TheGrimsey"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/TheGrimsey/oxidized_navigation"
repository = "https://github.com/TheGrimsey/oxidized_navigation"
documentation = "https://docs.rs/crate/oxidized_navigation"

keywords = ["gamedev", "navmesh", "navmesh-generation", "bevy"]
categories = ["game-development"]

[lib]
bench = false

[features]
default = ["parry3d"]
rapier = ["bevy_rapier3d", "parry3d"]
avian = ["avian3d", "parry3d"]
debug_draw = [
    "bevy/bevy_gizmos",
    "bevy/bevy_render",
    "bevy_rapier3d?/debug-render-3d",
    "avian3d?/debug-plugin",
]
trace = []

[[example]]
name = "rapier3d"
required-features = ["rapier", "debug_draw"]

[[example]]
name = "rapier3d_heightfield"
required-features = ["rapier", "debug_draw"]

[[example]]
name = "rapier3d_multi_floor"
required-features = ["rapier", "debug_draw"]

[[example]]
name = "avian"
required-features = ["avian", "debug_draw"]

[[example]]
name = "avian_multi_floor"
required-features = ["avian", "debug_draw"]

[[example]]
name = "parry3d"
required-features = ["parry3d", "debug_draw"]

[[test]]
name = "rapier3d"
required-features = ["rapier"]

[[test]]
name = "avian"
required-features = ["avian"]

[[test]]
name = "parry3d"
required-features = ["parry3d"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "multi_threaded",
    "bevy_log",
] }

# parry3d doesn't expose the convert-glam feature, so we need to add nalgebra to enable the feature
nalgebra = { version = "0.33", features = ["convert-glam029"] }

parry3d = { version = "0.17", optional = true }

bevy_rapier3d = { version = "0.28", optional = true, default-features = false, features = [
    "dim3",
] }
avian3d = { version = "0.2", optional = true, default-features = false, features = [
    "3d",
    "f32",
    "parry-f32",
], git = "https://github.com/Jondolf/avian.git" }

smallvec = { version = "1.13", features = ["union"] }
cfg-if = "1.0"

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_pbr",
    "bevy_render",
    "bevy_window",
    "bevy_winit",
    "x11",
    "ktx2",
    "tonemapping_luts",
    "zstd",
] }
criterion = { version = "0.5" }
bevy_editor_pls = { git = "https://github.com/onkoe/bevy_editor_pls.git" }

[[bench]]
name = "simple_geometry"
harness = false
required-features = ["parry3d"]

[[bench]]
name = "simple_navigation"
harness = false
required-features = ["parry3d"]

[package.metadata.docs.rs]
# Compile docs.rs docs with debug_draw so docs for it appear.
features = ["debug_draw"]
